# Geovannyy-ML-DM-with-Python-and-Azure-ML-Studio

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml
data/Task_1_processed/: feature_info.json
data/Task_1_processed/model_ready/: data_description.txt
data/processed/Task_1_processed/: bank_processed_features.csv  bank_processed_smote_features.csv  bank_processed_smote_target.csv  bank_processed_smoteenn_features.csv  bank_processed_smoteenn_target.csv  feature_info.json  original_features.csv  original_target.csv  smote_features.csv  smote_target.csv  smoteenn_features.csv  smoteenn_target.csv
data/processed/Task_2_processed/: clustered_data.csv  feature_importance.csv  pca_features.csv  pca_model.joblib  preprocessing_info.json  scaler_model.joblib
data/processed/Task_3_processed/: X_test.npz  X_val.npz  base_model_history.pkl  preprocessing_objects.pkl  text_preprocessing_artifacts.pkl  tokenizer.json  tokenizer.pkl  training_history.pkl  word_frequencies.csv  y_test.npy  y_train.npy  y_val.npy
models/: final_model.joblib
models/Task_1/: detailed_training_results.json  evaluation_results.json  training_results.json
models/Task_3/: base_model_history.json  hyperparameter_results.json  lstm_tuned_history.json
notebooks/: Task_1_Classification.ipynb  Task_2_Clustering.ipynb  Task_2_Clustering.md  Task_3_Sentiment Analysis.ipynb  Task_3_Sentiment_Analysis.ipynb  notebook_content.md  notebook_content_task1.md
reports/model_evaluation_json/: model_evaluation.json
reports/model_evaluations/: nested_cv_results.csv
(+49 files in other folders)
