[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tabango_00531298"
version = "0.0.1"
description = "Machine Learning \u0026 Data Mining with Python and Azure Machine Learning Studio"
authors = [
  { name = "Geovanny Tabango @ University of Salford" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["tabango_00531298"]
force_sort_within_sections = true
